plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'pl.tomskr'
version = '0.0.1-SNAPSHOT'
description = 'HigienaHarmonogramBackend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

bootRun {
    jvmArgs '-Xshare:off'
}

test {
    jvmArgs '-Xshare:off'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    mockitoAgent
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-h2console'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.xerial:sqlite-jdbc:3.50.3.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-rest'
    testImplementation 'org.mockito:mockito-core'
    mockitoAgent('org.mockito:mockito-core') {
        transitive = false
    }
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs "-javaagent:${configurations.mockitoAgent.asPath}"
}

tasks.named('bootRun') {
    jvmArgs += ['--enable-native-access=ALL-UNNAMED']
}

tasks.named('test') {
    jvmArgs += ['--enable-native-access=ALL-UNNAMED']
}
